--- a/src/content/basics/enterprise-guide/graph-administration.mdx
+++ b/src/content/basics/enterprise-guide/graph-administration.mdx
@@ -21,17 +21,17 @@ Whether embarking on an initial consolidation project or iterating subgraph sche
 
 At Apollo, we have worked with teams that start this schema design process by handing a blank piece of paper to client developers and asking them to sketch out the ideal shape of a query response. Once the shape of the query is defined, it's used as starting point for rolling out the necessary service changes to support that query. There may be subsequent edits made to the draft query based on unavoidable constraints of the existing graph structure or the underlying data sources. After some amount of further iteration, the client developers can test out the new query and the schema update can be deployed.
 
-There are many different variations of this schema design process, but one consistent theme is that there are unknowns that must be addressed before any change can be safely implemented in a schema that will be served in production. At a minimum, teams should be able to discover what is currently available in the schema beyond the subgraph that they own. This discovery helps teams leverage existing entities in a graph, avoid duplication, and help contribute to a more cohesive model of the company's data. Further, teams need to understand if their proposed changes compose into the overall graph *before* investing time in implementation.
+There are many different variations of this schema design process, but one consistent theme is that there are unknowns that must be addressed before any change can be safely implemented in a schema that will be served in production. At a minimum, teams should be able to discover what is currently available in the schema beyond the subgraph that they own. This discovery helps teams leverage existing entities in a graph, avoid duplication, and help contribute to a more cohesive model of the company's data. Further, teams need to understand if their proposed changes compose into the overall graph _before_ investing time in implementation.
 
 To support and enhance our customer's schema design workflows, the Apollo solutions team designed the [Apollo Workbench VS Code extension](https://marketplace.visualstudio.com/items?itemName=apollographql.apollo-workbench). This extension allows developers to design and test federated schema design by modeling GraphQL operations and providing feedback about composition errors directly in VS Code. It also integrates with Apollo Studio's schema registry so that all subgraph schemas may be downloaded for a graph and modified in a non-destructive environment. The Apollo Workbench extension may be downloaded from the VS Code extension marketplace.
 
 ### Deploying changes into the graph
 
-Once schema changes are ready to deploy, teams need a workflow for rolling out the changes to different environments and informing other teams of those changes. This is where a *schema registry* becomes essential. A centralized registry will be the source of truth for the company's graph, provides an overall view of the graph so team members can understand how their portion of the schema fits into the larger picture, allows developers to safely push changes to that graph, and can integrate with other developer tooling.
+Once schema changes are ready to deploy, teams need a workflow for rolling out the changes to different environments and informing other teams of those changes. This is where a _schema registry_ becomes essential. A centralized registry will be the source of truth for the company's graph, provides an overall view of the graph so team members can understand how their portion of the schema fits into the larger picture, allows developers to safely push changes to that graph, and can integrate with other developer tooling.
 
 With a centralized registry in place, a gateway can reference the composed schema directly from the registry and schema change events can be used to drive updates to the configuration of an Apollo Gateway. In turn, referencing a schema configuration from a registry allows a federated graph's schema to be updated on the fly and without restarting the gateway service to force recomposition. Service owners can then incorporate schema pushes into their CI/CD pipelines once the artifact has been deployed and is ready to serve traffic.
 
-Apollo Studio can serve as this centralized registry, and subsequently, unlock all of the capabilities of [managed federation](/federation/managed-federation/overview/). Managed federation will create a new gateway configuration every time a schema is pushed to the registry by one of the subgraphs using the `rover subgraph publish` command from the [Rover CLI](/rover/), but only does so when those changes can be composed into the existing graph without breaking changes for other subgraphs and clients. Additionally, managed federation allows teams to create different *variants* of the graph that correspond to the different environments where the graph runs (such as staging and production). Each variant has its own GraphQL schema, which means schemas can differ between environments.
+Apollo Studio can serve as this centralized registry, and subsequently, unlock all of the capabilities of [managed federation](/federation/managed-federation/overview/). Managed federation will create a new gateway configuration every time a schema is pushed to the registry by one of the subgraphs using the `rover subgraph publish` command from the [Rover CLI](/rover/), but only does so when those changes can be composed into the existing graph without breaking changes for other subgraphs and clients. Additionally, managed federation allows teams to create different _variants_ of the graph that correspond to the different environments where the graph runs (such as staging and production). Each variant has its own GraphQL schema, which means schemas can differ between environments.
 
 Ultimately, there will need to be controls in place to manage graph contributions and those controls will live in the schema registry. Each push of an updated subgraph schema to the registry is an opportunity to perform validation that flags breaking changes to the overall graph. At a minimum, a schema registry should be capable of determining if an update to a subgraph's schema can be safely composed back in, and then upon successful composition, drive the updated schema to the gateway service.
 
@@ -51,7 +51,7 @@ Ideally, a subgraph's schema registration should be incorporated into a relevant
 
 Confirming valid schema composition is only half of the battle when guarding against breaking changes in production—you'll also need to ensure that schema updates won't break existing operations currently used by clients. Nobody wants to deal with (or be the cause of) production downtime, and it has very real financial consequences for companies. For a large e-commerce application, a few minutes of downtime can have six-figure implications. Within a distributed GraphQL architecture that favors continual schema evolution, developers working on subgraph services should feel confident that they can release changes without doing unintended damage to client applications. For example, even something as simple as changing an existing field on an Object type from non-null to nullable can lead to breaking changes for clients that aren't prepared to handle a potentially null value.
 
-This is where a schema registry provides even more value when combined with observability tools that collect tracing data on the operations performed against the schema. These tools allow you to perform analysis on a composed schema to verify if any proposed changes will affect existing traffic to the API. *Schema validation* is the process of performing static analysis of a schema against a set of known GraphQL operations for a given window of time. The period that you check against may need to be large if any mobile clients consume the graph (because you won't have as much control over upgrade cycles as with web-based clients).
+This is where a schema registry provides even more value when combined with observability tools that collect tracing data on the operations performed against the schema. These tools allow you to perform analysis on a composed schema to verify if any proposed changes will affect existing traffic to the API. _Schema validation_ is the process of performing static analysis of a schema against a set of known GraphQL operations for a given window of time. The period that you check against may need to be large if any mobile clients consume the graph (because you won't have as much control over upgrade cycles as with web-based clients).
 
 Apollo Studio facilitates schema validation via the Rover CLI using `rover subgraph check` command. Teams can use this command in their deployment pipelines to ensure proposed schema changes don't adversely affect client traffic. If Apollo Studio detects a potentially dangerous change, then it will display information in its user interface about what the breaking change is, what clients are affected (by client name and version number), what operations are impacted, and the volume of traffic running against those operations. As a result, schema validation provides a scalable solution that supports safe, incremental graph evolution driven by multiple teams.
 
@@ -73,7 +73,7 @@ GraphQL offers a client-centric approach to developing APIs, and this promise ex
 
 When a company shifts toward a consolidated graph, client developers who may have previously juggled multiple GraphQL endpoints or other point-to-point APIs no longer need to jump through client-side hoops to query all of the data needed to render a view in an application. That said, with a centralized schema registry in place, a common set of standards should be established to structure how clients make requests to the graph.
 
-At a minimum, there should be basic controls on what operations are executed against the graph, and how those operations are structured. Tracing data becomes far more useful and actionable when clients include their names and versions as metadata. When using Apollo Client for web or mobile, you can specify `name` and `version` options that will automatically be translated into header values sent with every request  (specifically, the headers are called `apollographql-client-name` and `apollographql-client-version`, and they may be set manually for other GraphQL clients). Tools such as Apollo Studio can then use this operation trace metadata to help service developers conduct more effective schema validation.
+At a minimum, there should be basic controls on what operations are executed against the graph, and how those operations are structured. Tracing data becomes far more useful and actionable when clients include their names and versions as metadata. When using Apollo Client for web or mobile, you can specify `name` and `version` options that will automatically be translated into header values sent with every request (specifically, the headers are called `apollographql-client-name` and `apollographql-client-version`, and they may be set manually for other GraphQL clients). Tools such as Apollo Studio can then use this operation trace metadata to help service developers conduct more effective schema validation.
 
 In addition to identifying themselves by name and version, clients should use [named operations](https://spec.graphql.org/June2018/#sec-Named-Operation-Definitions) for each request to the graph. For example, at Apollo, we prepend `UI_` to the names of all operations sent from the Apollo Studio web application. Other teams go so far as to add linting rules to check the structure of client operations as a part of that client's deployment pipeline too.
 
@@ -83,11 +83,11 @@ While there isn't a single "best" way to structure operation names, the importan
 
 Codegen-related tooling can help facilitate client development for both web and mobile applications. To support modern, strongly-typed web development, the [GraphQL Code Generator](https://graphql-code-generator.com/) library can be used to generate types for operation results.
 
-On the iOS side, the [Apollo CLI](https://www.apollographql.com/docs/ios/tutorial/tutorial-obtain-schema/#download-your-servers-schema) may be used to download the graph's schema and add it to a target's directory, and then subsequently generate code as a build step based on the operations saved in `.graphql` files. For Android, an Apollo Gradle plugin is available to download the schema and generate type-safe models and code from operations in `.graphql` files when built.
+On the iOS side, the [Apollo CLI](/ios/tutorial/tutorial-obtain-schema/#download-your-servers-schema) may be used to download the graph's schema and add it to a target's directory, and then subsequently generate code as a build step based on the operations saved in `.graphql` files. For Android, an Apollo Gradle plugin is available to download the schema and generate type-safe models and code from operations in `.graphql` files when built.
 
 ### Additional tools for client developers
 
-Apollo provides additional tools to help support client development, including the [Apollo Client Devtools](https://www.apollographql.com/docs/react/development-testing/developer-tooling/#apollo-client-devtools) extensions for Chrome and Firefox, which includes an embedded GraphiQL IDE along with query, mutation, and cache inspectors. The [Apollo VS Code extension](https://www.apollographql.com/docs/devtools/editor-plugins/) also supports client development with GraphQL syntax highlighting, operation autocompletion, performance information, and more. For iOS, [Apollo Xcode Add-ons](https://github.com/apollographql/xcode-graphql) provides syntax highlighting for GraphQL query document files to Xcode.
+Apollo provides additional tools to help support client development, including the [Apollo Client Devtools](/react/development-testing/developer-tooling/#apollo-client-devtools) extensions for Chrome and Firefox, which includes an embedded GraphiQL IDE along with query, mutation, and cache inspectors. The [Apollo VS Code extension](/devtools/editor-plugins/) also supports client development with GraphQL syntax highlighting, operation autocompletion, performance information, and more. For iOS, [Apollo Xcode Add-ons](https://github.com/apollographql/xcode-graphql) provides syntax highlighting for GraphQL query document files to Xcode.
 
 ## Observability
 
@@ -103,18 +103,18 @@ The gateway will send this tracing data to Apollo Studio where it may be used fo
 
 ![A federated trace representation in Apollo Studio](../images/enterprise-guide/apollo-studio-federated-trace.jpg)
 
-When Apollo Server is used to power subgraphs, this tracing data is provided out-of-the-box via the [inline trace plugin](https://www.apollographql.com/docs/apollo-server/api/plugin/inline-trace/#using-the-plugin). Many [third-party federation libraries](/federation/supported-subgraphs/) also expose federated tracing data. Note that not all third-party federation libraries will necessarily provide field-level tracing data in a response, but the gateway's aggregated trace will still show the total time spent in the service even though the detailed field resolver data won't be available for that portion of the query plan.
+When Apollo Server is used to power subgraphs, this tracing data is provided out-of-the-box via the [inline trace plugin](/apollo-server/api/plugin/inline-trace/#using-the-plugin). Many [third-party federation libraries](/federation/supported-subgraphs/) also expose federated tracing data. Note that not all third-party federation libraries will necessarily provide field-level tracing data in a response, but the gateway's aggregated trace will still show the total time spent in the service even though the detailed field resolver data won't be available for that portion of the query plan.
 
 ### Integration with other observability tools
 
-Many teams use additional observability tools to monitor application performance and these tools may also be integrated with a federated graph. Apollo Studio connects directly with [DataDog](https://www.apollographql.com/docs/studio/datadog-integration/) and many other integrations are possible too, either through a custom Apollo Server plugin in the gateway, a custom `RemoteGraphQLDataSource`, or by carrying specific headers throughout a request.
+Many teams use additional observability tools to monitor application performance and these tools may also be integrated with a federated graph. Apollo Studio connects directly with [DataDog](/graphos/datadog-integration/) and many other integrations are possible too, either through a custom Apollo Server plugin in the gateway, a custom `RemoteGraphQLDataSource`, or by carrying specific headers throughout a request.
 
-For example, when using AWS CloudWatch an `aws-request-id` header must is included with the request, but by default, Apollo Server's [usage reporting plugin](https://www.apollographql.com/docs/apollo-server/api/plugin/usage-reporting/) excludes all headers. However, the usage reporting plugin can be configured to include this header in its traces as follows:
+For example, when using AWS CloudWatch an `aws-request-id` header must is included with the request, but by default, Apollo Server's [usage reporting plugin](/apollo-server/api/plugin/usage-reporting/) excludes all headers. However, the usage reporting plugin can be configured to include this header in its traces as follows:
 
 ```typescript
 ApolloServerPluginUsageReporting({
-  sendHeaders: { onlyNames: ['aws-request-id'] }
-})
+  sendHeaders: {onlyNames: ['aws-request-id']}
+});
 ```
 
 When tracing data is viewed in Apollo Studio, you will now have the `aws-request-id` available to help diagnose service-level performance issues in CloudWatch in relation to the federated traces.
@@ -125,7 +125,7 @@ As another example, your team may need to understand the relationship between an
 
 ```js
 class OperationNameForwarding extends RemoteGraphQLDataSource {
-  willSendRequest({ context: { operationName }, request }) {
+  willSendRequest({context: {operationName}, request}) {
     if (request?.variables.representations) {
       let key = JSON.stringify(request.variables.representations);
       let keyHash = createHash('sha512').update(key).digest('hex');
@@ -153,14 +153,14 @@ To set company-wide standards for the graph, a graph governance group should be 
 
 At a minimum, the governance group should consist of one representative from each of these stakeholder categories (though ideally, each subgraph service and client team will have representation):
 
-|Stakeholder|Role|Ownership|
-|---|---|---|
-|**Executive Sponsor**|Provides approval to help ensure the prioritization of the project|Owns resourcing for the overall initiative|
-|**Graph Champion**|Is the driving force behind the initial consolidation project and is instrumental in obtaining executive sponsorship|Owns internal training and onboarding to the graph|
-|**Subgraph Lead**|Represents a subgraph service (usually the team lead and may also be a Graph Champion)|Owns service boundary resources|
-|**Product Manager**|Helps shape schema design within service boundaries|Owns the representation of the service boundary in the graph|
-|**DevOps Representative**|Ensures consistent CI/CD pipelines for subgraphs|Owns CI/CD pipeline requirements and underlying infrastructure and tooling|
-|**Client Developer Advocate**|Advocates for client consumption patterns in relation to schema design and evolution (representation from every client team is not required, though would be helpful)|Owns graph consumer tooling and SDKs (partners with a relevant Product Manager)|
+| Stakeholder                   | Role                                                                                                                                                                  | Ownership                                                                       |
+| ----------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- |
+| **Executive Sponsor**         | Provides approval to help ensure the prioritization of the project                                                                                                    | Owns resourcing for the overall initiative                                      |
+| **Graph Champion**            | Is the driving force behind the initial consolidation project and is instrumental in obtaining executive sponsorship                                                  | Owns internal training and onboarding to the graph                              |
+| **Subgraph Lead**             | Represents a subgraph service (usually the team lead and may also be a Graph Champion)                                                                                | Owns service boundary resources                                                 |
+| **Product Manager**           | Helps shape schema design within service boundaries                                                                                                                   | Owns the representation of the service boundary in the graph                    |
+| **DevOps Representative**     | Ensures consistent CI/CD pipelines for subgraphs                                                                                                                      | Owns CI/CD pipeline requirements and underlying infrastructure and tooling      |
+| **Client Developer Advocate** | Advocates for client consumption patterns in relation to schema design and evolution (representation from every client team is not required, though would be helpful) | Owns graph consumer tooling and SDKs (partners with a relevant Product Manager) |
 
 Ideally, the graph governance group should be formed at the outset of a consolidation project. If a similar GraphQL Center of Excellence already exists, its composition should be evaluated to ensure that the key graph stakeholders that will be involved in the consolidation project have adequate representation within the group.
 
