--- a/src/content/graphos/contracts.mdx
+++ b/src/content/graphos/contracts.mdx
@@ -104,7 +104,7 @@ Older versions of the above libraries and tools don't fully support the required
 
 > **This step is required for Federation 1 supergraphs only.** If you have a Federation 2 supergraph, proceed to the next step.
 
-A contract uses one of your graph's existing [variants](/studio/org/graphs/#variants) (called the **source variant**) to generate its contract schema. If your source variant uses Federation 1, you need to enable its support for the `@tag` directive in Apollo Studio.
+A contract uses one of your graph's existing [variants](/graphos/org/graphs/#variants) (called the **source variant**) to generate its contract schema. If your source variant uses Federation 1, you need to enable its support for the `@tag` directive in Apollo Studio.
 
 Open the Settings page for the variant you want to use as your source variant, then select the **This Variant** tab:
 
