--- a/src/content/graphos/index.mdx
+++ b/src/content/graphos/index.mdx
@@ -3,15 +3,14 @@ title: Introduction to Apollo GraphOS
 description: The supergraph platform
 ---
 
-import CalloutCard from '../shared/callout-card.mdx';
-import { Link } from 'gatsby';
+import {Link} from 'gatsby';
 
 **Apollo GraphOS** is the cloud platform for building, growing, and collaborating on your organization's **supergraph**.
 
 <p>
   <Button
     colorScheme="indigo"
-    to="/studio/getting-started/"
+    to="/graphos/getting-started/"
     as={Link}
     style={{
       marginRight: '10px'
@@ -19,11 +18,7 @@ import { Link } from 'gatsby';
   >
     Create your first supergraph!
   </Button>
-  <Button
-    colorScheme="gray"
-    to="/intro/platform/"
-    as={Link}
-  >
+  <Button colorScheme="gray" to="/intro/platform/" as={Link}>
     What's a supergraph?
   </Button>
 </p>
@@ -73,9 +68,10 @@ In addition to the features above, an Enterprise plan provides access to our Gra
 ---
 
 **Ready to create your first supergraph?**
+
 <Button
   colorScheme="indigo"
-  to="/studio/getting-started/"
+  to="/graphos/getting-started/"
   as={Link}
   style={{
     marginRight: '10px'
