--- a/src/content/graphos/metrics/operation-signatures.mdx
+++ b/src/content/graphos/metrics/operation-signatures.mdx
@@ -144,7 +144,7 @@ The signature algorithm's primary purpose is to group together operations that d
 
 
 ## Logging signatures at runtime
-To view operation signature hashes in your own logging tools, you can create an [Apollo Server plugin](https://www.apollographql.com/docs/apollo-server/integrations/plugins/) that accesses hash values from the shared `context`. The relevant values are available in the `queryHash` and `operationName` properties:
+To view operation signature hashes in your own logging tools, you can create an [Apollo Server plugin](/apollo-server/integrations/plugins/) that accesses hash values from the shared `context`. The relevant values are available in the `queryHash` and `operationName` properties:
 
 <MultiCodeBlock>
 
