--- a/src/content/shared/register-cli.mdx
+++ b/src/content/shared/register-cli.mdx
@@ -1,7 +1,7 @@
 1. If you haven't yet:
 
-   - [Install the Rover CLI](https://www.apollographql.com/docs/rover/getting-started/)
-   - [Authenticate Rover](https://www.apollographql.com/docs/rover/configuring/) with Apollo Studio
+   - [Install the Rover CLI](/rover/getting-started/)
+   - [Authenticate Rover](/rover/configuring/) with Apollo Studio
 
 2. Decide how you'll provide your server's schema to Rover. You can either:
 
