--- a/src/content/shared/register-federated-cli.mdx
+++ b/src/content/shared/register-federated-cli.mdx
@@ -1,4 +1,4 @@
-In a federated architecture, each of your graph's [subgraphs](https://www.apollographql.com/docs/federation/subgraphs/) uses the Rover CLI to register its schema with Apollo:
+In a federated architecture, each of your graph's [subgraphs](/federation/subgraphs/) uses the Rover CLI to register its schema with Apollo:
 
 ```mermaid
 graph LR;
@@ -16,8 +16,8 @@ graph LR;
 
 If you haven't yet:
 
-- [Install the Rover CLI](https://www.apollographql.com/docs/rover/getting-started/)
-- [Authenticate Rover](https://www.apollographql.com/docs/rover/configuring/) with Apollo Studio
+- [Install the Rover CLI](/rover/getting-started/)
+- [Authenticate Rover](/rover/configuring/) with Apollo Studio
 
 Then, **do the following for each of your subgraphs**:
 
