--- a/src/content/technotes/TN0009-gateway-performance.mdx
+++ b/src/content/technotes/TN0009-gateway-performance.mdx
@@ -10,7 +10,7 @@ If your supergraph gateway uses Apollo Server with the `@apollo/gateway` library
 
 The Apollo Router is a high-throughput, low-latency Apollo Federation GraphQL gateway written in Rust. Its performance and consistency significantly exceed any Node.js-based gateway.
 
-[Migrating to Apollo Router from @apollo/gateway](https://www.apollographql.com/docs/router/migrating-from-gateway)
+[Migrating to Apollo Router from @apollo/gateway](/router/migrating-from-gateway)
 
 ## Disable or reduce `ftv1` inline tracing
 
@@ -56,7 +56,7 @@ If you've installed middleware (such as Express middleware) or Apollo Server plu
 
 OpenTelemetry is the <abbr title="Cloud Native Computing Foundation">CNCF</abbr> standard for instrumenting distributed systems. By tracing Apollo Gateway, subgraph services, data sources, and any other systems in the request path, you might discover that the cause of performance issues occurs outside of Apollo Gateway.
 
-[OpenTelemetry in Apollo Gateway](https://www.apollographql.com/docs/federation/opentelemetry)
+[OpenTelemetry in Apollo Gateway](/federation/opentelemetry)
 
 ## Investigate subgraph latency
 
