--- a/src/content/graphos/validating-client-operations.mdx
+++ b/src/content/graphos/validating-client-operations.mdx
@@ -3,7 +3,7 @@ title: Validating client operations
 description: Confirm that all client operations are supported by your schema
 ---
 
-You can confirm that all of the GraphQL operations defined in your client application are valid against the types, fields, and arguments in your graph's [published schema](./schema/cli-registration). To do so, you use the `apollo client:check` command of the [Apollo CLI](https://www.apollographql.com/docs/devtools/cli/):
+You can confirm that all of the GraphQL operations defined in your client application are valid against the types, fields, and arguments in your graph's [published schema](./schema/cli-registration). To do so, you use the `apollo client:check` command of the [Apollo CLI](/devtools/cli/):
 
 ```
 $ apollo client:check
@@ -22,11 +22,11 @@ GetTeamGrid: src/components/TeamGrid.jsx:4
 You run this command from your client application's root. It recursively scans your project for the following:
 
 - GraphQL operations wrapped in the `gql` tag
-- [Client-side schema extensions](https://www.apollographql.com/docs/react/local-state/client-side-schema/) wrapped in the `gql` tag
+- [Client-side schema extensions](/react/local-state/client-side-schema/) wrapped in the `gql` tag
 
 By combining your registered graph's schema with your client-side schema extensions, the `apollo client:check` command can confirm whether the shape of each defined operation conforms to the shape of your combined schema.
 
-> Make sure that your project [provides a graph API key](https://www.apollographql.com/docs/devtools/cli/#provide-an-api-key) to the Apollo CLI. This both authenticates the CLI with Studio and specifies which graph's schema you're checking against.
+> Make sure that your project [provides a graph API key](/devtools/cli/#provide-an-api-key) to the Apollo CLI. This both authenticates the CLI with Studio and specifies which graph's schema you're checking against.
 
 ## Checking against a particular variant
 
@@ -48,7 +48,6 @@ Here's a Circle CI configuration excerpt that incorporates the command:
 version: 2
 
 jobs:
-
   # ...other jobs...
 
   # Define a separate job for each environment you validate against.
