--- a/src/content/shared/obtain-graph-api-key.mdx
+++ b/src/content/shared/obtain-graph-api-key.mdx
@@ -10,7 +10,7 @@
 
 3. Open your graph's Settings page and select the API Keys tab. Click **Create New Key**. Give your key a name, such as `Production`. This helps you keep track of each API key's use.
 
-   > If you don't see the API Keys tab, you don't have sufficient permissions for your graph. Only organization members with the `Org Admin` or `Graph Admin` role can manage graph API keys. [Learn more about member roles.](/studio/org/members/)
+   > If you don't see the API Keys tab, you don't have sufficient permissions for your graph. Only organization members with the `Org Admin` or `Graph Admin` role can manage graph API keys. [Learn more about member roles.](/graphos/org/members/)
 
 4. Copy the key's value. **For security, you cannot view an API key's value in Studio after creating it.**
 
