--- a/src/content/technotes/TN0008-production-readiness-checklist.mdx
+++ b/src/content/technotes/TN0008-production-readiness-checklist.mdx
@@ -8,9 +8,9 @@ We recommend that you complete this checklist before your supergraph begins hand
 
 ## In Apollo Studio
 
-- Ensure that you've created multiple [variants](/studio/org/graphs#variants) to represent the different environments where your supergraph runs (production, staging, and so on).
-  - Optionally, [protect your production variant](/studio/studio-graph-features#protected-variants-enterprise-only) to avoid accidental changes while working in Apollo Studio.
-- Ensure that your [clients identify themselves](/studio/metrics/client-awareness/) by name and version.
+- Ensure that you've created multiple [variants](/graphos/org/graphs#variants) to represent the different environments where your supergraph runs (production, staging, and so on).
+  - Optionally, [protect your production variant](/graphos/studio-graph-features#protected-variants-enterprise-only) to avoid accidental changes while working in Apollo Studio.
+- Ensure that your [clients identify themselves](/graphos/metrics/client-awareness/) by name and version.
   - If you're using an Apollo Client library, you can add a client name and version to the constructor.
     - For example, the [React client uses the `name` and `version` attributes](/react/api/core/ApolloClient#name) in the constructor options.
   - If you're using a third-party GraphQL client, set the `apollographql-client-name` and `apollographql-client-version` HTTP headers for each request to identify your client.
@@ -23,7 +23,7 @@ We recommend that you complete this checklist before your supergraph begins hand
 - Ensure that you've correctly configured [managed federation](/federation/managed-federation/setup/).
 - Ensure that you've integrated [`rover subgraph check`](/rover/commands/subgraphs#subgraph-check) and [`rover subgraph publish`](/rover/commands/subgraphs#subgraph-publish) into your CI/CD pipeline.
 - If your [subgraph servers are listed as compatible with `ftv1`](/federation/supported-subgraphs/), ensure that you've enabled [federated traces](/federation/metrics/), and that you can view operation metrics as expected in Apollo Studio.
-  - Enable [fractional trace sampling via `fieldLevelInstrumentation`](/studio/metrics/field-usage/#fractional-sampling) to reduce performance hits due to tracing.
+  - Enable [fractional trace sampling via `fieldLevelInstrumentation`](/graphos/metrics/field-usage/#fractional-sampling) to reduce performance hits due to tracing.
 - Consider adding caching layers.
   - Apollo Server and the Apollo Router both support [automatic persisted queries (APQ)](/apollo-server/performance/apq/) out of the box.
     - If you're using an Apollo Client library, make sure to enable APQ support.
@@ -44,23 +44,23 @@ We recommend that you complete this checklist before your supergraph begins hand
 This example uses both the [`buildService`](/federation/api/apollo-gateway/#buildservice) option and the [`RemoteGraphQLDataSource`](/federation/api/apollo-gateway/#apq) class to enable APQ to each subgraph.
 
 ```js
-import { ApolloServer } from '@apollo/server';
-import { startStandaloneServer } from '@apollo/server/standalone';
-import { ApolloGateway, RemoteGraphQLDataSource } from '@apollo/gateway';
-import { readFileSync } from 'fs';
+import {ApolloServer} from '@apollo/server';
+import {startStandaloneServer} from '@apollo/server/standalone';
+import {ApolloGateway, RemoteGraphQLDataSource} from '@apollo/gateway';
+import {readFileSync} from 'fs';
 
 const gateway = new ApolloGateway({
   supergraphSdl: readFileSync('./supergraph.graphql').toString(),
-  buildService: ({ url }) => {
-    return new RemoteGraphQLDataSource({ url, apq: true });
-  },
+  buildService: ({url}) => {
+    return new RemoteGraphQLDataSource({url, apq: true});
+  }
 });
 
 const server = new ApolloServer({
-  gateway,
+  gateway
 });
 
 // Note the top-level await!
-const { url } = await startStandaloneServer(server);
+const {url} = await startStandaloneServer(server);
 console.log(`🚀  Server ready at ${url}`);
 ```
