--- a/src/content/technotes/TN0013-monolith-to-federation.mdx
+++ b/src/content/technotes/TN0013-monolith-to-federation.mdx
@@ -33,7 +33,7 @@ Start the process by making a "federated graph of one". Your existing monolith c
 1. Set up [header propagation](/router/configuration/header-propagation/) so that the monolith receives any necessary headers from the router.
 1. Set up internal routing rules to redirect client requests to the Apollo Router instead of your monolith.
 1. Enable usage metrics reporting to Apollo Studio.
-1. Add [subgraph checks](/studio/schema-checks/) to your monolith's CI pipeline.
+1. Add [subgraph checks](/graphos/schema-checks/) to your monolith's CI pipeline.
 
 At this point, client requests go to your new Apollo Router instead of the monolith, but it's serving the same schema so clients won't know the difference.
 
