--- a/src/content/technotes/TN0014-contracts-patterns.mdx
+++ b/src/content/technotes/TN0014-contracts-patterns.mdx
@@ -4,13 +4,13 @@ id: TN0014
 tags: [contracts, best practices]
 ---
 
-[Contracts](/studio/contracts/) enable teams to contribute to a single unified graph while also delivering use-case-specific schemas to different types of consumers. Graph administrators define filter rules to generate **contract schemas** that are a strict subset of the source supergraph.
+[Contracts](/graphos/contracts/) enable teams to contribute to a single unified graph while also delivering use-case-specific schemas to different types of consumers. Graph administrators define filter rules to generate **contract schemas** that are a strict subset of the source supergraph.
 
 There are three different filtering strategies you can use for a contract:
 
-* Selective exclusion (pruning)
-* Selective inclusion (deny by default)
-* Combined exclusion and inclusion
+- Selective exclusion (pruning)
+- Selective inclusion (deny by default)
+- Combined exclusion and inclusion
 
 The sections below cover when to use each strategy and why.
 
@@ -40,6 +40,7 @@ As a result, Apollo finds this approach best when it's acceptable to have fields
 Although the "includes" filter can be more cumbersome to use than "excludes", we recommend using it to create contracts in most cases for the following reasons:
 
 - It's more intuitive to reason with when working with the schema SDL. Having clear markings on which fields _are_ exposed, alongside clear naming conventions, provides an improved developer experience when working with contracts.
+
 2. It's much more secure when compared to the "exclude" strategy, given that new and potentially sensitive schema fields must be explicitly _added_ to a contract.
 
 To demonstrate why this is the case, let's take a look at the same type as before, but using an "include" model. This time, the company opted to use an `external` tag to denote which fields are exposed to external consumers:
@@ -102,7 +103,6 @@ You can also use this strategy for documentation purposes, where including and o
 When considering the strategies described above, there's an additional composition behavior to be aware of: it's possible for a tag applied in one subgraph to affect fields that are defined in _another_ subgraph.
 
 As an example, consider these two subgraphs:
-
 
 ```graphql
 # Subgraph A
