--- a/src/content/studio/metrics/datadog-integration.mdx
+++ b/src/content/studio/metrics/datadog-integration.mdx
@@ -107,7 +107,7 @@ At Apollo, we use Studio to monitor Studio itself, so this graph for us looks li
 <img
   src="../img/datadog/datadog.png"
   alt="p95 latency graph"
-  class="screenshot"
+  className="screenshot"
 />
 
 To generate more advanced reports, open up a [Datadog notebook](https://app.datadoghq.com/notebook).
